<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:text="@string/log_in" />

</FrameLayout>